# cda-bindings

./: .xsdata.xml  LICENSE  NarrativeBlock.patch  POCD_MT000040_extensions.patch  README.md  pyproject.toml  regen.sh  remove_cd_qualifier.patch  requirements.txt  setup.py  unbounded_ce_translation.patch
cda/org/hl7/sdtc/: __init__.py  act_reference.py  as_patient_relationship.py  as_patient_relationship_1.py  birth_time.py  deceased_ind.py  deceased_time.py  desc.py  discharge_disposition_code.py  ethnic_group_code.py  function_code.py  id.py  int_pos.py  text.py  (+12 more)
cdabindings/: __init__.py  accession_number.py  act.py  act_class.py  act_class_document.py  act_class_observation.py  act_class_root.py  act_class_supply.py  act_clinical_document.py  act_mood.py  act_reference.py  act_relationship_fulfills.py  act_relationship_has_component.py  act_relationship_type.py  ad.py  address_part_type.py  adxp.py  adxp_additional_locator.py  adxp_building_number_suffix.py  adxp_care_of.py  adxp_census_tract.py  adxp_city.py  adxp_country.py  adxp_county.py  adxp_delimiter.py  adxp_delivery_address_line.py  adxp_delivery_installation_area.py  adxp_delivery_installation_qualifier.py  adxp_delivery_installation_type.py  adxp_delivery_mode.py  adxp_delivery_mode_identifier.py  adxp_direction.py  adxp_house_number.py  adxp_house_number_numeric.py  adxp_post_box.py  adxp_postal_code.py  adxp_precinct.py  adxp_state.py  adxp_street_address_line.py  adxp_street_name.py  (+436 more)
patches/generated_code/: cs_init.patch  duplicated_classes.patch  patient.patch
patches/xsd/: remove_cd_qualifier.patch
(+754 files in other folders)
